# frumsceaft

./: Cargo.toml  README.md
.cargo/.cargo/: config
.github/workflows/: rust.yml
ecg/: Cargo.toml
ecg/src/: main.rs
examples/non-secure-blinky/: Cargo.toml
examples/secure-blinky/: Cargo.toml  README.md  build.rs
examples/secure-blinky/src/: main.rs
frumsceaft/: Cargo.toml
frumsceaft/.cargo/: config.toml
frumsceaft/examples/nrf53/: config.toml
frumsceaft/examples/nrf53/non-secure/: Cargo.toml  build.rs  rust-toolchain.toml
frumsceaft/examples/nrf53/non-secure/src/: main.rs
frumsceaft/examples/nrf53/secure/: build.rs  memory.ld
frumsceaft/examples/nrf53/secure/.cargo/: config.toml
frumsceaft/examples/stm32l5/: config.toml
frumsceaft/examples/stm32l5/non-secure/: Cargo.toml  memory.x
frumsceaft/examples/stm32l5/non-secure/.cargo/: config.toml
frumsceaft/examples/stm32l5/non-secure/src/: main.rs
frumsceaft/examples/stm32l5/secure/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
frumsceaft/examples/stm32l5/secure/.cargo/: config.toml
frumsceaft/examples/stm32l5/secure/src/: main.rs
frumsceaft/src/: lib.rs  stm32l562.rs
src/: lib.rs  nrf53.rs
