[package]
name = "frumsceaft"
version = "0.0.1"
edition = "2021"

[features]
default = ["nrf53"]
nrf53 = ["nrf5340-app-pac"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
nrf5340-app-pac = { version = "0.10.1", optional = true }
