[package]
name = "frumsceaft"
version = "0.0.2"
edition = "2021"

[features]
default = ["nrf53"]
nrf53 = ["nrf5340-app-pac"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
nrf5340-app-pac = { version = "0.11", optional = true }

[patch.crates-io]
cortex-m = { git = "https://github.com/sphw/cortex-m.git", branch = "feature/add-itns-nvic" }
