[package]
authors = ["Sascha Wise <me@saschawise.com>"]
edition = "2018"
readme = "README.md"
name = "stm32l5-sec-example"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt-rtt = "0.3.1"
defmt = "0.3"

embedded-hal = { version = "0.2.5", features = ["unproven"] }
frumsceaft = { path = "../../.." }
stm32-hal2 = { git = "https://github.com/sphw/stm32-hal.git", branch = "dma-support-l5", features = ["l562", "embedded-hal", "l5rt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dependencies.stm32l5]
features = ["stm32l562", "rt"]
version = "0.14"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32l5-sec-example"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
